[package]
name = "realkings"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.1.2"
bevy = "0.14.1"
bevy-tnua = "0.19.0"
bevy-tnua-avian3d = "0.1.1"
bevy_third_person_camera = "0.1.11"
